--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" 
     rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grow Your Brand with Secure Digital Solutions|TheSecureMedia</title>
-    <meta name="description" content="Boost your online presence with innovative digital solutions, expert media services, and secure strategies from TheSecureMedia to stand out." />
+    <!-- <title>Grow Your Brand with Secure Digital Solutions|TheSecureMedia</title>
+    <meta name="description" content="Boost your online presence with innovative digital solutions, expert media services, and secure strategies from TheSecureMedia to stand out." /> -->
     <!-- Google Tag Manager -->
     <script>
       (function(w,d,s,l,i){w[l]=w[l]||[];
